[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = ["urf94 <urf@mercuryproject.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.1%2Bcu117-cp310-cp310-win_amd64.whl"}
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-win_amd64.whl"}
pip = "^23.2.1"
torchsde = "^0.2.5"
einops = "^0.6.1"
tqdm = "^4.66.1"
psutil = "^5.9.5"
scipy = { version = "^1.11.2", python = "3.10" }
safetensors = "^0.3.3"
pyyaml = "^6.0.1"
transformers = "4.27.4"
aiohttp = "^3.8.5"
accelerate = "^0.23.0"
opencv-python = "^4.8.0.76"
insightface = "^0.7.3"
pillow = "9.5.0"
simple-lama-inpainting = "^0.1.2"
onnxruntime = "^1.16.0"
onnx = "^1.14.1"
lama-cleaner = "^1.2.4"
numpy = "1.25.0"
pytesseract = "^0.3.10"
image-ocr = "^0.0.4"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow-intel = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
